test/Fail/Issue7892.err
Issue7892.agda:23.19-20: error: [UnequalTerms]
The terms
  "bar"
and
  "foo"
are not equal at type String
when checking that the expression r has type R "foo"
